fix(prod): set environment in Restic service file
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/68

--- a/infra/modules/openstack/fcos-prod/modules/backups/files/restic.service
+++ b/infra/modules/openstack/fcos-prod/modules/backups/files/restic.service
@@ -7,4 +7,5 @@ After=network-online.target packages.service
 Type=oneshot
 Restart=no
 
+EnvironmentFile=/etc/profile.d/restic.sh
 ExecStart=/usr/local/bin/backup.sh
