--- a/metal/roles/openstack/defaults/tasks/projects.yml
+++ b/metal/roles/openstack/defaults/tasks/projects.yml
@@ -30,6 +30,14 @@
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
 
+- name: "Set quotas for the 'staging' project"
+  openstack.cloud.quota:
+    name: staging
+    cloud: kolla-admin
+    gigabytes: -1
+  environment:
+    OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
+
 - name: "Create the 'dev' project"
   openstack.cloud.project:
     state: present
