--- a/infra/modules/openstack/fcos-mediasrv/modules/services/files/prowlarr.service
+++ b/infra/modules/openstack/fcos-mediasrv/modules/services/files/prowlarr.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Prowlarr Container
 Documentation=man:podman-generate-systemd(1)
-Wants=network-online.target
-After=network-online.target
+Wants=podman-networks.service
+After=podman-networks.service
 RequiresMountsFor=%t/containers
 
 [Service]
@@ -22,7 +22,7 @@ ExecStart=/usr/bin/podman run -d --rm --replace \
     -e PGID=9030 \
     -e TZ="America/Vancouver" \
     -e UMASK="027" \
-    -p 9696:9696 \
+    --network proxy \
     docker.io/linuxserver/prowlarr:latest
 
 ExecStop=/usr/bin/podman stop --ignore -t 10 --cidfile=%t/%n.ctr-id
