--- a/infra/modules/openstack/fcos-mediasrv/modules/services/files/hass.service
+++ b/infra/modules/openstack/fcos-mediasrv/modules/services/files/hass.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Home Assistant Container
 Documentation=man:podman-generate-systemd(1)
-Wants=network-online.target
-After=network-online.target
+Wants=podman-networks.service
+After=podman-networks.service
 RequiresMountsFor=%t/containers
 
 [Service]
@@ -21,7 +21,7 @@ ExecStart=/usr/bin/podman run -d --rm --replace \
     -e PGID=9024 \
 	-e TZ=America/Vancouver \
 	-e UMASK=0007 \
-	--net host \
+    --network proxy \
 	docker.io/linuxserver/homeassistant:latest
 
 ExecStop=/usr/bin/podman stop --ignore -t 10 --cidfile=%t/%n.ctr-id
