--- a/infra/modules/openstack/fcos-mediasrv/modules/services/files/jellyfin.service
+++ b/infra/modules/openstack/fcos-mediasrv/modules/services/files/jellyfin.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Jellyfin Container
 Documentation=man:podman-generate-systemd(1)
-Wants=network-online.target
-After=network-online.target
+Wants=podman-networks.service
+After=podman-networks.service
 RequiresMountsFor=%t/containers
 
 [Service]
@@ -19,7 +19,7 @@ ExecStart=/usr/bin/podman run -d --rm --replace \
     --user 9023:9030 \
     -v /srv/jellyfin:/config:Z \
     -v /mnt/library:/media/library:z \
-    -p 8096:8096 \
+    --network proxy \
     docker.io/jellyfin/jellyfin:latest
 
 ExecStop=/usr/bin/podman stop --ignore -t 10 --cidfile=%t/%n.ctr-id
