fix(prod): allow DNS across multiple environments
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/73

--- a/metal/roles/openstack/designate/defaults/main.yml
+++ b/metal/roles/openstack/designate/defaults/main.yml
@@ -1,6 +1,4 @@
 ---
-kolla_venv: /root/kolla-venv
-
-designate_upstream_servers:
-  - 1.1.1.1
-  - 1.0.0.1
+designate_kolla_venv: /root/kolla-venv
+designate_default_zone: homelab.internal.
+designate_upstream_servers: ['1.1.1.1', '1.0.0.1']
