--- a/metal/roles/openstack/defaults/defaults/main.yml
+++ b/metal/roles/openstack/defaults/defaults/main.yml
@@ -2,3 +2,10 @@
 # Name (path) of the venv, using the root user's home as the base.
 # Ex. A value of 'kolla-venv' will become '/root/kolla-venv'
 kolla_venv: /root/kolla-venv
+
+public_network_name: public
+public_subnet_name: public
+public_subnet_cidr: 192.168.1.0/24
+public_subnet_gateway_ip: 192.168.1.254
+public_subnet_allocation_pool_start: 192.168.1.20
+public_subnet_allocation_pool_end: 192.168.1.100
