--- a/metal/roles/openstack/defaults/tasks/projects.yml
+++ b/metal/roles/openstack/defaults/tasks/projects.yml
@@ -11,6 +11,15 @@
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
 
+- name: "Assign roles for the 'prod' project"
+  openstack.cloud.role_assignment:
+    user: admin
+    role: admin
+    project: prod
+    cloud: kolla-admin
+  environment:
+    OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
+
 - name: "Set quotas for the 'prod' project"
   openstack.cloud.quota:
     name: prod
@@ -30,6 +39,15 @@
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
 
+- name: "Assign roles for the 'staging' project"
+  openstack.cloud.role_assignment:
+    user: admin
+    role: admin
+    project: staging
+    cloud: kolla-admin
+  environment:
+    OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
+
 - name: "Set quotas for the 'staging' project"
   openstack.cloud.quota:
     name: staging
@@ -45,6 +63,15 @@
     description: Development environment
     enabled: true
     domain_id: Default
+    cloud: kolla-admin
+  environment:
+    OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
+
+- name: "Assign roles for the 'dev' project"
+  openstack.cloud.role_assignment:
+    user: admin
+    role: admin
+    project: dev
     cloud: kolla-admin
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
