ci(staging): add changes rule to destroy job
Adds `changes` to the staging environment's destroy job, so that it matches the apply job and is only triggered when infrastructure changes.

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/75

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,6 +199,9 @@ terraform:destroy:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: never
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      changes:
+        - .gitlab-ci.yml
+        - infra/**/*
       when: manual
       allow_failure: true  # true for non-blocking manual job
   environment:
