fix(metal): resolve designate role errors
Key changes:

- Create the DNS zone in 'prod' project instead of 'admin
- Fix recursion issue with 'network.hostname' variable
- Updates the Ansible Terraform provider which fixes some issues there

Closes #19

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/76

--- a/metal/roles/openstack/designate/tasks/main.yml
+++ b/metal/roles/openstack/designate/tasks/main.yml
@@ -34,5 +34,7 @@
     ttl: 3600
     state: present
     cloud: kolla-admin
+    auth:
+      project_name: prod
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
