--- a/metal/roles/openstack/designate/vars/main.yml
+++ b/metal/roles/openstack/designate/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 designate_kolla_venv: "{{ common.kolla_venv }}"
-designate_default_zone: "{{ network.root_domain }}"
+designate_default_zone: "{{ network.domain }}"
 designate_upstream_servers: "{{ network.public_dns_servers }}"
