fix(prod): various improvements to DNS
This MR fixes a handful of issues with the DNS implementation:

- Adjusts comments and documentation examples as required
- Creates a new internal DNS zone and record for OpenStack node
- Improves and simplifies environment-scoped DNS

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/77

--- a/infra/modules/openstack/fcos-mediasrv/modules/services/templates/swag.service
+++ b/infra/modules/openstack/fcos-mediasrv/modules/services/templates/swag.service
@@ -19,7 +19,7 @@ ExecStart=/usr/bin/podman run -d --rm --replace \
     --cap-add=NET_ADMIN \
     -e PUID=8443 \
     -e PGID=8443 \
-    -e URL=${environment}.${domain} \
+    -e URL=${domain} \
     -e SUBDOMAINS=wildcard \
     -e VALIDATION=dns \
     -e DNSPLUGIN=cloudflare \
