--- a/metal/roles/openstack/designate/tasks/main.yml
+++ b/metal/roles/openstack/designate/tasks/main.yml
@@ -25,16 +25,27 @@
     line: '        recursion yes;'
   notify: designate_restart_bind9
 
-- name: Create the default zone
+- name: Create the internal DNS zone
   openstack.cloud.dns_zone:
     name: "{{ designate_default_zone }}."
-    description: Default zone
+    description: Internal zone
     email: "placeholder@{{ designate_default_zone }}"
     type: primary
     ttl: 3600
     state: present
     cloud: kolla-admin
-    auth:
-      project_name: prod
+  environment:
+    OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
+
+- name: Create the DNS A record for OpenStack AIO node
+  openstack.cloud.recordset:
+    zone: "{{ designate_default_zone }}."
+    name: "{{ designate_openstack_node_hostname }}.{{ designate_default_zone }}."
+    recordset_type: "a"
+    records: ["{{ ansible_default_ipv4.address | default(ansible_all_ipv4_addresses[0]) }}"]
+    description: OpenStack node A record
+    ttl: 3600
+    state: present
+    cloud: kolla-admin
   environment:
     OS_CLIENT_CONFIG_FILE: /etc/kolla/clouds.yaml
