--- a/cluster/platform/vault/vault.yaml
+++ b/cluster/platform/vault/vault.yaml
@@ -68,32 +68,32 @@ spec:
   # tlsExpiryThreshold: 168h
 
   # Request an Ingress controller with the default configuration
-  ingress:
-    # Specify Ingress object annotations here, if TLS is enabled (which is by default)
-    # the operator will add NGINX, Traefik and HAProxy Ingress compatible annotations
-    # to support TLS backends
-    annotations:
-      cert-manager.io/cluster-issuer: internal-issuer
-    # Override the default Ingress specification here
-    # This follows the same format as the standard Kubernetes Ingress
-    # See: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#ingressspec-v1beta1-extensions
-    spec:
-      ingressClassName: nginx
-      rules:
-        - host: &host vault.homelab.internal
-          http:
-            paths:
-              - backend:
-                  service:
-                    name: vault
-                    port:
-                      number: 8200
-                path: /
-                pathType: Prefix
-      tls:
-        - hosts:
-            - *host
-          secretName: vault-tls-certificate
+  # ingress:
+  #   # Specify Ingress object annotations here, if TLS is enabled (which is by default)
+  #   # the operator will add NGINX, Traefik and HAProxy Ingress compatible annotations
+  #   # to support TLS backends
+  #   annotations:
+  #     cert-manager.io/cluster-issuer: internal-issuer
+  #   # Override the default Ingress specification here
+  #   # This follows the same format as the standard Kubernetes Ingress
+  #   # See: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#ingressspec-v1beta1-extensions
+  #   spec:
+  #     ingressClassName: nginx
+  #     rules:
+  #       - host: &host vault.${DOMAIN}
+  #         http:
+  #           paths:
+  #             - backend:
+  #                 service:
+  #                   name: vault
+  #                   port:
+  #                     number: 8200
+  #               path: /
+  #               pathType: Prefix
+  #     tls:
+  #       - hosts:
+  #           - *host
+  #         secretName: vault-tls-certificate
 
   # Use local disk to store Vault file data, see config section.
   volumes:
