--- a/cluster/system/flux-sync/system/external-dns.yaml
+++ b/cluster/system/flux-sync/system/external-dns.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: ingress-nginx
+  name: external-dns
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: kube-prometheus-stack
+  # dependsOn:
+  #   - name: kube-prometheus-stack
   interval: 60m
-  path: ./cluster/system/ingress-nginx
+  path: ./cluster/system/external-dns
   prune: true
   wait: true
   sourceRef:
@@ -17,3 +17,5 @@ spec:
   postBuild:
     substitute:
       DOMAIN: ${DOMAIN}
+      DESIGNATE_AUTH_ID: ${DESIGNATE_AUTH_ID}
+      DESIGNATE_AUTH_SECRET: ${DESIGNATE_AUTH_SECRET}
