feat(k8s): update cluster to v1.26.8
Key changes:

- Update K8s template to v1.26.8
- Update Flux install chart to v2.12.2
- Update Flux sync chart to v1.8.1
- Update descheduler chart to v1.26.x
- Update Makefile

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/79

--- a/cluster/system/flux-sync/system/descheduler.yaml
+++ b/cluster/system/flux-sync/system/descheduler.yaml
@@ -5,9 +5,8 @@ metadata:
   name: descheduler
   namespace: flux-system
 spec:
-  # TODO: Integrate with Prometheus alerting
-  # dependsOn:
-  #   - name: kube-prometheus-stack
+  dependsOn:
+    - name: kube-prometheus-stack
   interval: 60m
   path: ./cluster/system/descheduler
   prune: true
