--- a/cluster/system/descheduler/release.yaml
+++ b/cluster/system/descheduler/release.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      version: "0.23.x"
+      version: "0.26.x"  # This seems to follow Kubernetes version tags
       chart: descheduler
       sourceRef:
         kind: HelmRepository
@@ -40,3 +40,5 @@ spec:
           enabled: true
         LowNodeUtilization:
           enabled: false
+    serviceMonitor:
+      enabled: true
