feat(k8s): implement volume backups
Key changes:

- Install volsync in the cluster
- Configure backups to our existing GCP bucket
- Backup Jellyfin and Home Assistant PVCs

Closes #20

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/80

--- a/cluster/apps/media-server/jellyfin/secrets.yaml
+++ b/cluster/apps/media-server/jellyfin/secrets.yaml
@@ -23,3 +23,16 @@ spec:
       remoteRef:
         key: /mediasrv/jellyfin
         property: ldapServiceAccountPassword
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: jellyfin-restic-config
+type: Opaque
+stringData:
+  RESTIC_REPOSITORY: gs:${GCP_BACKUP_BUCKET_NAME}:/volsync/jellyfin
+  RESTIC_PASSWORD: ${BACKUP_REPO_PASSWORD}
+  GOOGLE_PROJECT_ID: ${GCP_BACKUP_PROJECT_ID}
+data:
+  # This value is base64 encoded by default
+  GOOGLE_APPLICATION_CREDENTIALS: ${GCP_BACKUP_BUCKET_CREDS}
