--- a/cluster/system/flux-sync/apps/smart-home.yaml
+++ b/cluster/system/flux-sync/apps/smart-home.yaml
@@ -21,3 +21,7 @@ spec:
   postBuild:
     substitute:
       DOMAIN: ${DOMAIN}
+      GCP_BACKUP_PROJECT_ID: ${GCP_BACKUP_PROJECT_ID}
+      GCP_BACKUP_BUCKET_NAME: ${GCP_BACKUP_BUCKET_NAME}
+      GCP_BACKUP_BUCKET_CREDS: ${GCP_BACKUP_BUCKET_CREDS}
+      BACKUP_REPO_PASSWORD: ${BACKUP_REPO_PASSWORD}
