--- a/cluster/system/flux-sync/platform/postgres.yaml
+++ b/cluster/system/flux-sync/platform/postgres.yaml
@@ -20,4 +20,4 @@ spec:
     substitute:
       GCP_BACKUP_BUCKET_NAME: ${GCP_BACKUP_BUCKET_NAME}
       GCP_BACKUP_BUCKET_CREDS: ${GCP_BACKUP_BUCKET_CREDS}
-      PGSQL_BACKUP_PASSWORD: ${PGSQL_BACKUP_PASSWORD}
+      BACKUP_REPO_PASSWORD: ${BACKUP_REPO_PASSWORD}
