--- a/cluster/system/csi-cinder/kustomization.yaml
+++ b/cluster/system/csi-cinder/kustomization.yaml
@@ -2,4 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - crds.yaml
+  - snapshot-controller-rbac.yaml
+  - snapshot-controller-install.yaml
   - storageclasses.yaml
+  - snapshotclasses.yaml
