chore(metal): modularize 'kolla-deploy' role
Key changes:

- Split `kolla-deploy` role into `prepare_host` and `deploy_kolla` roles
- Also move the Nova configuration task into its own role

MR: https://gitlab.com/ralgar/homelab/-/merge_requests/81

--- a/metal/10-deploy-openstack.yml
+++ b/metal/10-deploy-openstack.yml
@@ -12,7 +12,9 @@
     - vars/main.yml
   roles:
     - common/wait_for_connection
-    - openstack/kolla-deploy
+    - openstack/bootstrap_host
+    - openstack/deploy_kolla
     - openstack/defaults
+    - openstack/nova
     - openstack/cinder
     - openstack/designate
