--- a/metal/roles/openstack/bootstrap_host/tasks/files.yml
+++ b/metal/roles/openstack/bootstrap_host/tasks/files.yml
@@ -17,7 +17,7 @@
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: 0644
-  notify: deploy
+  notify: prechecks
 
 - name: Assert '/etc/ansible/ansible.cfg'
   ansible.builtin.copy:
