--- a/metal/roles/openstack/deploy_kolla/tasks/main.yml
+++ b/metal/roles/openstack/deploy_kolla/tasks/main.yml
@@ -1,9 +1,4 @@
 ---
-- name: Perform Kolla prechecks
-  ansible.builtin.shell: |
-    source {{ kolla_venv }}/bin/activate
-    kolla-ansible prechecks
-
 - name: Perform Kolla deployment
   ansible.builtin.shell: |
     source {{ kolla_venv }}/bin/activate
@@ -13,3 +8,6 @@
   ansible.builtin.command:
     argv: ['true']
   notify: post_deploy
+
+- name: Flush Handlers
+  ansible.builtin.meta: flush_handlers
