feat(metal): deploy object storage
MR: https://gitlab.com/ralgar/homelab/-/merge_requests/82

--- a/metal/10-deploy-openstack.yml
+++ b/metal/10-deploy-openstack.yml
@@ -13,6 +13,7 @@
   roles:
     - common/wait_for_connection
     - openstack/bootstrap_host
+    - openstack/swift
     - openstack/deploy_kolla
     - openstack/defaults
     - openstack/nova
