--- a/metal/roles/openstack/deploy_kolla/tasks/main.yml
+++ b/metal/roles/openstack/deploy_kolla/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Perform Kolla prechecks
+  ansible.builtin.shell: |
+    source {{ kolla_venv }}/bin/activate
+    kolla-ansible prechecks
+
 - name: Perform Kolla deployment
   ansible.builtin.shell: |
     source {{ kolla_venv }}/bin/activate
