--- a/metal/vars/globals.yml
+++ b/metal/vars/globals.yml
@@ -426,8 +426,8 @@ enable_redis: "yes"
 #enable_senlin: "no"
 #enable_skyline: "no"
 #enable_solum: "no"
-#enable_swift: "no"
-#enable_swift_s3api: "no"
+enable_swift: "yes"
+enable_swift_s3api: "yes"
 #enable_tacker: "no"
 #enable_telegraf: "no"
 #enable_trove: "no"
@@ -521,8 +521,8 @@ enable_redis: "yes"
 ########################
 # Configure image backend.
 #glance_backend_ceph: "no"
-#glance_backend_file: "yes"
-#glance_backend_swift: "no"
+glance_backend_file: "no"
+glance_backend_swift: "yes"
 #glance_backend_vmware: "no"
 #glance_backend_s3: "no"
 #enable_glance_image_cache: "no"
